# cs546_fall2021_project_hrazo

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  lzo_client.cpp  main.cpp  pred.cpp  zlib_client.cpp  zstd_client.cpp
include/: csvfile.h  data_structure.h  enumerations.h  lib_client.h  lzo_client.h  time_counter.h  timer.h  zlib_client.h  zstd_client.h
lib/libtorch/: build-hash  build-version
lib/libtorch/include/caffe2/core/: macros.h
lib/libtorch/include/nvfuser_resources/: PhiloxCudaStateRaw.h  UnpackRaw.h  block_reduction.h  broadcast.h  fp16_support.h  grid_reduction.h  helpers.h  random_numbers.h  tensor.h
lib/lzo-2.10/: Makefile  config.status  libtool
lib/lzo-2.10/examples/: dict  lzopack  overlap  precomp  precomp2  simple
lib/lzo-2.10/examples/.deps/: dict.Po  lzopack.Po  overlap.Po  precomp.Po  precomp2.Po  simple.Po
lib/lzo-2.10/examples/.libs/: dict  lzopack  overlap  precomp  precomp2  simple
lib/lzo-2.10/lzotest/: lzotest
lib/lzo-2.10/lzotest/.deps/: lzotest.Po
lib/lzo-2.10/lzotest/.libs/: lzotest
lib/lzo-2.10/minilzo/: testmini
lib/lzo-2.10/minilzo/.deps/: t-minilzo.Po  t-testmini.Po
lib/lzo-2.10/src/.deps/: lzo1.Plo  lzo1_99.Plo  lzo1a.Plo  lzo1a_99.Plo  lzo1b_1.Plo  lzo1b_2.Plo  lzo1b_3.Plo  lzo1b_4.Plo  lzo1b_5.Plo  lzo1b_6.Plo  lzo1b_7.Plo  lzo1b_8.Plo  lzo1b_9.Plo  lzo1b_99.Plo  lzo1b_9x.Plo  lzo1b_cc.Plo  lzo1b_d1.Plo  lzo1b_d2.Plo  lzo1b_rr.Plo  lzo1b_xx.Plo  lzo1c_1.Plo  lzo1c_2.Plo  lzo1c_3.Plo  lzo1c_4.Plo  lzo1c_5.Plo  lzo1c_6.Plo  lzo1c_7.Plo  lzo1c_8.Plo  lzo1c_9.Plo  lzo1c_99.Plo  lzo1c_9x.Plo  lzo1c_cc.Plo  lzo1c_d1.Plo  lzo1c_d2.Plo  lzo1c_rr.Plo  lzo1c_xx.Plo  lzo1f_1.Plo  lzo1f_9x.Plo  lzo1f_d1.Plo  lzo1f_d2.Plo  (+27 more)
lib/lzo-2.10/src/.libs/: liblzo2.lai
lib/lzo-2.10/tests/: align  chksum  promote  sizes
lib/lzo-2.10/tests/.deps/: align.Po  chksum.Po  promote.Po  sizes.Po
lib/lzo-2.10/tests/.libs/: align  chksum
lib/mpich-3.4.2/: c.txt  m.txt  mi.txt
ml/: create_data.py  dataset.py  main.py  model.py  requirements.txt  train.py
ml/utils/: utils.py
stress_tests/: cpu_stress_test.sh  cpu_stress_test_data.sh  mem_stress_test.sh  mem_stress_test_data.sh  plot_graphs.py
